objects/Region__c.object
<CustomObject>
    <description>Represents a region for vehicle activity (acquire, sell, etc).</description>
    <fields>
        <fullName>Shift_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Shift Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Skedulo_Region_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skedulo Region</label>
        <referenceTo>sked__Region__c</referenceTo>
        <relationshipLabel>Skedulo Regions</relationshipLabel>
        <relationshipName>Sked_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Shift_Key__c</columns>
        <columns>Timezone__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>